extension/popup.less
@font-face {
  font-family: old-english;
  src: url("fonts/old-english-text-mt.ttf");
}
@font-face {
  font-family: standard;
  src: url("fonts/standard.ttf");
}
@font-face {
  font-family: digital-mono;
  src: url("/fonts/digital-7-mono.ttf");
  unicode-range: U+00-B0, U+100-FFFF;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  margin: 15px 10px 0px;
  width: 260px;
  background-color: #111;
  font-family: standard;
  color: #eee;
  user-select: none;
}

a {
  z-index: 1000;
  color: #eee;
  text-decoration: none;
  user-select: auto;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 200px;
  height: 60px;
  padding: 0 15px 15px 15px;
  border-bottom: 1px solid #999;

  > #riddler-title {
    margin-top: 5px;
    font-family: old-english;
    font-size: 28px;
  }
}

main {
  display: flex;
  flex-direction: column;
  margin: 10px auto;
}

main > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 15px 0;
  width: 230px;
  text-align: center;

  &#currently-playing {
    text-align: center;
    font-size: 20px;

    > .label {
      font-size: 15px;
      font-style: italic;
      color: #ffe;
    }
    figure {
      display: flex;
      align-items: center;
      font-weight: bold;

      &#riddle {
        flex-direction: column;
        justify-content: space-between;
        gap: .3em;
        margin: .9em auto;
        width: 80%;

        .icons {
          position: relative;
          display: flex;
          justify-content: center;
          width: 80%;

          img  {
            height: 40px;
            border-radius: 25%;
          }
          &:after {
            content: "";
            display: block;
            width: 100%;
            height: 100%;
            background: linear-gradient(
              to right,
              rgba(16, 16, 16, 1) 0%,
              rgba(16, 16, 16, 1) 5%,
              rgba(16, 16, 16, 0) 40%,
              rgba(16, 16, 16, 0) 60%,
              rgba(16, 16, 16, 1) 95%,
              rgba(16, 16, 16, 1) 100%,
            );
            border-radius: 1em;
            position: absolute;
            top: 0; left: 0;
          }
        }
        figcaption.full-name {
          line-height: 1.4em;
          font-size: .85em;
        }
      }
    }
    #level {
      position: relative;
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: 80%;
      font-size: .9em;

      > var#current-level {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: -1;
        padding-bottom: .2em;
        font-family: digital-mono;
        font-size: 1.2em;
        font-weight: bold;
        font-style: normal;
        letter-spacing: .15em;
        text-shadow:
          0 0 .4em crimson, 0 0 .8em crimson, 0 0 1.2em crimson;
      }
      #previous, #next {
        display: flex;
        align-items: center;
        gap: .8em;

        > * {
          display: flex;
          align-items: center;
          justify-content: center;
          width: 1em;
          border: thin solid rgba(255, 255, 255, .5);
          border-radius: 25%;
          font-size: 1.2em;

          &:not(.disabled) {
            cursor: pointer;
            transition: background-color .2s, color .2s;

            &:hover {
              color: black;
              background-color: white;
            }
          }
          &.disabled {
            color: #666;
          }
        }
      }
    }
    .page-explorer {
      margin: .8em auto .4em;
      width: 85%;
      height: 220px;
      padding: .3em;
      border-radius: .2em;
      background-color: white;
      overflow: scroll;
      color: black;

      figure.file {
        margin: .2em auto;
        width: fit-content;
        padding: .1em .4em .1em .3em;
        cursor: pointer;
        user-select: none;

        > img {
          margin-right: .15em;
          max-width: 20px;
          max-height: 20px;
        }
        > figcaption {
          font-size: .7em;
          font-style: italic;
          color: #555;
        }
        > .file-count {
          margin: 0 .4em;
          font-size: .8em;
          color: #999;
          letter-spacing: -.02em;
          white-space: nowrap;
        }
        &.active {
          background-color: rgba(128, 64, 0, .15);
          border-radius: .4em;
        }
      }
    }
  }
  &#buttons:not(:last-of-type) {
    border-top: 1px solid #999;
  }
}

button, form {
  width: 230px;
  height: 50px;
}
button {
  display: flex;
  align-items: center;
  border: none;
  border-radius: 10px;
  background-color: #111;
  text-align: left;
  font-family: standard;
  font-style: italic;
  font-size: 20px;
  color: #eee;
  cursor: pointer;
  transition: background-color .2s, color .2s;

  > img {
    margin: 0 10px;
    height: 24px;
  }
  &:hover {
    background-color: #eee;
    color: #111;
  }
}

